Adds rendering ans some other changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         align-items: center;
         justify-content: center;
         height: 100vh;
-        background: black;
+        background-image: url("https://images.unsplash.com/photo-1474983797926-3939622ca489?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80");
       }
       .value {
         display: block;
@@ -36,27 +36,7 @@
     </style>
   </head>
   <body>
-    <div class="timer" id="timer-1">
-      <div class="field">
-        <span class="value" data-value="days">11</span>
-        <span class="label">Days</span>
-      </div>
-
-      <div class="field">
-        <span class="value" data-value="hours">11</span>
-        <span class="label">Hours</span>
-      </div>
-
-      <div class="field">
-        <span class="value" data-value="mins">11</span>
-        <span class="label">Minutes</span>
-      </div>
-
-      <div class="field">
-        <span class="value" data-value="secs">11</span>
-        <span class="label">Seconds</span>
-      </div>
-    </div>
+    <div class="timer" id="timer-1"></div>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
